--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
+    "react-server-dom-parcel": "^19.2.3",
+    "react-server-dom-webpack": "^19.2.3",
     "swiper": "^12.0.1"
   },
   "devDependencies": {
